Fix overflow -

--- a/src/app/agent/medical-insurance/medical-insurance.component.scss
+++ b/src/app/agent/medical-insurance/medical-insurance.component.scss
@@ -9,6 +9,7 @@
     width: 100%;
     box-sizing: border-box;
     overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .lighter {
