--- a/src/app/agent/shared/agent-input/agent-input.component.scss
+++ b/src/app/agent/shared/agent-input/agent-input.component.scss
@@ -5,7 +5,8 @@
   overflow: hidden;
 
   .code-inputs {
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 
   .abs-bottom {
